[tool.poetry]
name = "review_requester"
version = "0.1.0"
description = "An app to handle managing and requesting reviewers for take-home application projects."
authors = ["Brad Brown <brad.brown@jumpcloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2"
flask-restplus = "^0.13.0"
flask-sqlalchemy = "^2.4"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = "=19.10b0"
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
